# lltcg-prototype

./: README.md  main.py  pyproject.toml
scrape/: scrape.py
tests/integration/: test_card_details.py  test_scrape.py
